--- a/templates/status.html
+++ b/templates/status.html
@@ -18,7 +18,19 @@
     <script>
       /* `window.clocklet` object is available */
     </script>
+    <style>
+      .clocklet-options-1 {
+        font-family: Changa, sans-serif;
+        border-radius: 50%;
+      }
+    </style>
 
+    <style>
+      .clocklet-options-2 {
+        font-family: "Frank Ruhl Libre", serif;
+        font-weight: 500;
+      }
+    </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Changa|Frank+Ruhl+Libre:500">
 
     <style>
@@ -55,7 +67,19 @@
         <td id="infoBox" colspan="3"></td>
       </tr>
     </table><br>
-    <!-- <i id="LED" class="material-icons">lightbulb-outline</i> -->
+      <table>
+        <tr>
+        <td><input data-clocklet="class-name: clocklet-options-2; format: HH:mm; alignment: right; append-to: parent;" placeholder="" size="3" id="LightsONTime">
+        </td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table><!-- <i id="LED" class="material-icons">lightbulb-outline</i> -->
     <!-- lightbulb-outline
     lightbulb-on-outline
   https://material.io/resources/icons/?style=round-->
